--- a/examples-generated/cluster/null/v1alpha1/resource.yaml
+++ b/examples-generated/cluster/null/v1alpha1/resource.yaml
@@ -1,4 +1,4 @@
-apiVersion: null.template.crossplane.io/v1alpha1
+apiVersion: null.stripe.crossplane.io/v1alpha1
 kind: Resource
 metadata:
   annotations:
