--- a/examples-generated/namespaced/null/v1alpha1/resource.yaml
+++ b/examples-generated/namespaced/null/v1alpha1/resource.yaml
@@ -1,4 +1,4 @@
-apiVersion: null.template.m.crossplane.io/v1alpha1
+apiVersion: null.stripe.m.crossplane.io/v1alpha1
 kind: Resource
 metadata:
   annotations:
