--- a/examples/cluster/providerconfig/providerconfig.yaml
+++ b/examples/cluster/providerconfig/providerconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: template.crossplane.io/v1beta1
+apiVersion: stripe.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: default
