--- a/examples/namespaced/providerconfig/clusterproviderconfig.yaml
+++ b/examples/namespaced/providerconfig/clusterproviderconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: template.m.crossplane.io/v1beta1
+apiVersion: stripe.m.crossplane.io/v1beta1
 kind: ClusterProviderConfig
 metadata:
   name: default
