--- a/package/crds/null.template.crossplane.io_resources.yaml
+++ b/package/crds/null.template.crossplane.io_resources.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.18.0
-  name: resources.null.template.crossplane.io
+  name: resources.null.stripe.crossplane.io
 spec:
-  group: null.template.crossplane.io
+  group: null.stripe.crossplane.io
   names:
     categories:
     - crossplane
     - managed
-    - template
+    - stripe
     kind: Resource
     listKind: ResourceList
     plural: resources
