--- a/package/crds/template.m.crossplane.io_providerconfigs.yaml
+++ b/package/crds/template.m.crossplane.io_providerconfigs.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.18.0
-  name: providerconfigs.template.m.crossplane.io
+  name: providerconfigs.stripe.m.crossplane.io
 spec:
-  group: template.m.crossplane.io
+  group: stripe.m.crossplane.io
   names:
     categories:
     - crossplane
     - provider
-    - template
+    - stripe
     kind: ProviderConfig
     listKind: ProviderConfigList
     plural: providerconfigs
@@ -29,7 +29,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: A ProviderConfig configures a Template provider.
+        description: A ProviderConfig configures a STRIPE provider.
         properties:
           apiVersion:
             description: |-
