--- a/package/crossplane.yaml
+++ b/package/crossplane.yaml
@@ -1,7 +1,7 @@
 apiVersion: meta.pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: upjet-provider-template
+  name: provider-stripe
 spec:
   capabilities:
     - SafeStart
