--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,7 +5,6 @@
     ":semanticCommitTypeAll(chore)"
   ],
   "commitMessageAction": "update",
-
   "customManagers": [
     {
       "customType": "regex",
@@ -14,17 +13,17 @@
       ],
       "matchStrings": [
         "export TERRAFORM_PROVIDER_VERSION \\?= (?<currentValue>\\d+\\.\\d+\\.\\d+)",
-        "export TERRAFORM_NATIVE_PROVIDER_BINARY \\?= terraform-provider-bunnynet_v(?<currentValue>\\d+\\.\\d+\\.\\d+)"
+        "export TERRAFORM_NATIVE_PROVIDER_BINARY \\?= terraform-provider-stripe_v(?<currentValue>\\d+\\.\\d+\\.\\d+)"
       ],
       "datasourceTemplate": "github-releases",
-      "packageNameTemplate": "BunnyWay/terraform-provider-bunnynet",
+      "packageNameTemplate": "lukasaron/terraform-provider-stripe",
       "versioningTemplate": "semver"
     }
   ],
   "packageRules": [
     {
       "matchPackageNames": [
-        "BunnyWay/terraform-provider-bunnynet"
+        "lukasaron/terraform-provider-stripe"
       ],
       "branchTopic": "{{depName}}-{{newVersion}}",
       "recreateWhen": "auto",
@@ -32,8 +31,8 @@
       "semanticCommitScope": "deps",
       "labels": [
         "provider",
-        "BunnyWay",
-        "bunnynet"
+        "lukasaron",
+        "stripe"
       ]
     },
     {
