--- a/.github/workflows/prepare-new-version.yaml
+++ b/.github/workflows/prepare-new-version.yaml
@@ -12,6 +12,9 @@ concurrency:
   group: generate-after-renovate-${{ github.event.pull_request.head.ref }}
   cancel-in-progress: true
 
+env:
+  GO_VERSION: '1.24.10'
+
 jobs:
   generate-after-renovate:
     if: |
@@ -43,25 +46,16 @@ jobs:
         run: |
           cat Makefile
 
-      - name: Set up Go 1.21
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5
+      - name: Set up Go
+        uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # v6
         with:
-          go-version: "1.21"
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Install necessary tooling for the CI
         run: |
           go install golang.org/x/tools/cmd/goimports@latest
 
-      - name: First make generate (will fail for the docs problem, see README.md)
-        run: |
-          make generate >/dev/null 2>&1 || true
-      
-      - name: Run script fixies docs
-        run: |
-          chmod +x ./pre-make-generate.sh
-          ./pre-make-generate.sh
-
-      - name: Second make generate (this will not fail)
+      - name: Run Make Generate
         run: |
           make generate
 
